Update some section home and structure appmobile page

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Mac365</title>
+    <title>Orders CHINA</title>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Mac365" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -896,10 +896,10 @@
             <div class="container">
                 <div class="row m-0">
                     <div class="col-5">
-                        <div class="">
-                            <span>
+                        <div class="action-install">
+                            <h2>
                                 Cài đặt công cụ đặt hàng
-                            </span>
+                            </h2>
                             <div class="d-flex align-items-center">
                                 <div class='d-flex align-items-cente'>
                                     <img src="assets/images/icons/chrome.png" width="36" height="36" alt="">
@@ -917,12 +917,64 @@
                                 </div>
                             </div>
                         </div>
+                        <div>to do line follow design</div>
+                         <div class="action-dowload">
+                            <h2>
+                                tải ứng dụng naipot
+                            </h2>
+                            <div class="d-flex align-items-center">
+                                <div class='d-flex align-items-cente'>
+                                    <img src="assets/images/icons/apple-logo.png" width="36" height="36" alt="">
+                                    <div>
+                                        <span>Tải về trên</span>
+                                        <p class="text-uppercase">APP STORE</p>
+                                    </div>
+                                </div>
+                                <div class='d-flex align-items-center'>
+                                    <img src="assets/images/icons/android-logo.png" width="36" height="36" alt="">
+                                    <div>
+                                        <span>Tải về trên</span>
+                                        <p class="text-uppercase">CH PLAY</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-7 position-absolute">
                         <img src="assets/images/home/banner-laptop.png" width="100%" alt="">
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="intro container-fluid mt-177 p-0">
+            <div class="container">
+                <div class="row m-0">
+                    <h1 class="title">Chi phí nhập hàng ưu đãi và linh hoạt </h1>
+                    <div class="col-4">
+                        <div class="border-custom">
+                            <img src="./assets/images/icons/intro-1.png" alt="" srcset="">
+                            <h4>Phí nhập hộ thấp</h4>
+                            <p>Chỉ 10.000đ</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="border-custom">
+                            <img src="./assets/images/icons/intro-2.png" alt="" srcset="">
+                            <h4>Đặt cọc tiền hàng ít</h4>
+                            <p>Chỉ 70% tiền hàng</p>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="border-custom">
+                            <img src="./assets/images/icons/intro-3.png" alt="" srcset="">
+                            <h4>cam kết đúng hàng</h4>
+                            <p>Đúng link và theo yêu cầu</p>
+                        </div>
+                    </div>
+
+                </div>
+                </div>
         </section>
     </div>
     <footer>
