--- a/home.html
+++ b/home.html
@@ -976,6 +976,106 @@
                 </div>
                 </div>
         </section>
+        <section class="processOrders mt-5">
+            <div class="container">
+                <div class="row processOrders-top m-0">
+                        <div class="col-6">
+                            <h1>quy  trình nhập hàng <br> qua naipot</h1>
+                            <div>to do line follow design</div>
+                        </div>
+                         <div class="col-6">
+                            <img src="./assets/images/home/processorder-top.png" alt="" srcset="">
+                        </div>
+                </div>
+                  <div class="row processOrders-bottom mt-5">
+                        <div class="col position-relative">
+                           <div class="processOrders-bottom-number">1</div>
+                           <div class="processOrders-bottom-content">
+                                <img src="./assets/images/icons/process-order-1.png" alt="" srcset="">
+                                <h2>chọn hàng</h2>
+                                <p>Tại các website Trung Quốc</p>
+                           </div>
+                        </div>
+                         <div class="col position-relative">
+                           <div class="processOrders-bottom-number">2</div>
+                           <div class="processOrders-bottom-content">
+                                <img src="./assets/images/icons/process-order-2.png" alt="" srcset="">
+                                <h2>tạo đơn hàng</h2>
+                                <p>Trên website Naipot</p>
+                           </div>
+                        </div>
+                         <div class="col position-relative">
+                           <div class="processOrders-bottom-number">3</div>
+                           <div class="processOrders-bottom-content">
+                                <img src="./assets/images/icons/process-order-3.png" alt="" srcset="">
+                                <h2>ĐẶT cọc</h2>
+                                <p>70% giá trị đơn hàng</p>
+                           </div>
+                        </div>
+                         <div class="col position-relative">
+                           <div class="processOrders-bottom-number">4</div>
+                           <div class="processOrders-bottom-content">
+                                <img src="./assets/images/icons/process-order-4.png" alt="" srcset="">
+                                <h2>vận chuyển</h2>
+                                <p>Từ Trung Quốc về kho Việt Nam</p>
+                           </div>
+                        </div>
+                         <div class="col position-relative">
+                           <div class="processOrders-bottom-number">5</div>
+                           <div class="processOrders-bottom-content">
+                                <img src="./assets/images/icons/process-order-5.png" alt="" srcset="">
+                                <h2>nhận hàng</h2>
+                                <p>Tại nhà hoặc chuyển thẳng đến người mua</p>
+                           </div>
+                        </div>
+                </div>
+                     
+                </div>
+            </div>
+        </section>
+        <section class="serviceCommitment mt-5">
+            <div class="container">
+                <div class="row serviceCommitment-top m-0">
+                    <h1 class="title">cam kết dịch vụ</h1>
+                    <div>to do line follow design(maybe export img element)</div>
+                    <p class="sub-title">Nhằm mang đến cho quý khách hàng dịch vụ nhập hàng tốt nhất, chúng tôi luôn nỗ lực cải tiến không ngừng 
+nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho khách hàng sử dụng dịch vụ của chúng tôi !</p>
+                </div>
+
+                <div class="row serviceCommitment-bottom m-0">
+                    <img src="./assets/images/home/service-commitment.png" alt="" srcset="">
+                    <div class="col-12 row">
+                        <div class="col-4 serviceCommitment-item">
+                            <h3>Cam kết đặt hàng</h3>
+                            <p>Cam kết đền bù gấp 10 lần tiền hàng do Naipot đặt sai.</p>
+                        </div>
+                         <div class="col-4 serviceCommitment-item">
+                            <h3>Thời gian báo giá</h3>
+                            <p>Báo giá trong 8h kể từ lúc xuống đơn và đặt hàng trong 8h kể từ lúc khách hàng đặt cọc hoặc thanh toán.</p>
+                        </div>
+                         <div class="col-4 serviceCommitment-item">
+                            <h3>Cam kết hỗ trợ</h3>
+                            <p>Chúng tôi phát triển công nghệ để hỗ trợ Quý khách đặt hàng và tra cứu đơn hàng 24/7.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 row mt-5">
+                        <div class="col-4 serviceCommitment-item">
+                            <h3>Tỉ giá</h3>
+                            <p>Tỷ giá ổn định chuẩn xác 100% theo ngân hàng Công Thương Việt Nam, rẻ nhất thị trường order hàng hiện nay.</p>
+                        </div>
+                         <div class="col-4 serviceCommitment-item">
+                            <h3>Cam kết bồi thường</h3>
+                            <p>Cam kết bồi thường gấp 10 lần số tiền tiền chênh lệch nếu nhân viên                                tự tăng giá đơn hàng hoặc phí vận chuyển nội địa quốc tế.</p>
+                        </div>
+                         <div class="col-4 serviceCommitment-item">
+                            <h3>Thời gian vận chuyển</h3>
+                            <p>Thời gian vận chuyển ổn định chuẩn xác.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
         <div class="
