--- a/home.html
+++ b/home.html
@@ -1076,6 +1076,67 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                 </div>
             </div>
         </section>
+        <section class="feedback mt-5">
+            <div class="container">
+                <div class="row feedback-top m-0">
+                    <div class="col-3">
+                        <div class="feedback-top-number">98%</div>
+                        <div class="feedback-top-content">Khách hàng hài lòng về Naipot</div>
+                    </div>
+                     <div class="col-3">
+                        <div class="feedback-top-number">4h</div>
+                        <div class="feedback-top-content">Đặt hàng ngay sau khi đặt cọc</div>
+                    </div>
+                     <div class="col-3">
+                        <div class="feedback-top-number">96%</div>
+                        <div class="feedback-top-content">Đơn hàng giao dịch thành công</div>
+                    </div>
+                     <div class="col-3">
+                        <div class="feedback-top-number">48h</div>
+                        <div class="feedback-top-content">Từ kho Trung Quốc về Việt Nam</div>
+                    </div>
+                </div>
+                <div class="row feedback-bottom mt-5">
+                    <h1>đoạn này style cho anh 3 cái nằm dọc, a làm slider sau nha !</h1>
+                    <div class="col-12 row feedback-bottom-item">
+                        <div class="col-3">
+                            <img src="./assets/images/home/users.png" alt="">
+
+                        </div>
+                        <div class="col-9">
+                            <h1>Khách hàng nói về Naipot</h1>
+                            <img src="./assets/images/icons/icon-pre.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  diam nonummy nibh.</p>
+                            <span class="name">Angela J </span>
+                        </div>
+                    </div>
+                    <div class="col-12 row feedback-bottom-item">
+                        <div class="col-3">
+                            <img src="./assets/images/home/users.png" alt="">
+
+                        </div>
+                        <div class="col-9">
+                            <h1>Khách hàng nói về Naipot</h1>
+                            <img src="./assets/images/icons/icon-pre.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  diam nonummy nibh.</p>
+                            <span class="name">Angela J </span>
+                        </div>
+                    </div>
+                    <div class="col-12 row feedback-bottom-item">
+                        <div class="col-3">
+                            <img src="./assets/images/home/users.png" alt="">
+
+                        </div>
+                        <div class="col-9">
+                            <h1>Khách hàng nói về Naipot</h1>
+                            <img src="./assets/images/icons/icon-pre.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  diam nonummy nibh.</p>
+                            <span class="name">Angela J </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
         <div class="
