--- a/home.html
+++ b/home.html
@@ -1076,29 +1076,29 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                 </div>
             </div>
         </section>
-        <section class="feedback mt-5">
+        <section class="feedbacks mt-5">
             <div class="container">
                 <div class="row feedback-top m-0">
                     <div class="col-3">
-                        <div class="feedback-top-number">98%</div>
-                        <div class="feedback-top-content">Khách hàng hài lòng về Naipot</div>
+                        <div class="feedbacks-top-number">98%</div>
+                        <div class="feedbacks-top-content">Khách hàng hài lòng về Naipot</div>
                     </div>
                      <div class="col-3">
-                        <div class="feedback-top-number">4h</div>
-                        <div class="feedback-top-content">Đặt hàng ngay sau khi đặt cọc</div>
+                        <div class="feedbacks-top-number">4h</div>
+                        <div class="feedbacks-top-content">Đặt hàng ngay sau khi đặt cọc</div>
                     </div>
                      <div class="col-3">
-                        <div class="feedback-top-number">96%</div>
-                        <div class="feedback-top-content">Đơn hàng giao dịch thành công</div>
+                        <div class="feedbacks-top-number">96%</div>
+                        <div class="feedbacks-top-content">Đơn hàng giao dịch thành công</div>
                     </div>
                      <div class="col-3">
-                        <div class="feedback-top-number">48h</div>
-                        <div class="feedback-top-content">Từ kho Trung Quốc về Việt Nam</div>
+                        <div class="feedbacks-top-number">48h</div>
+                        <div class="feedbacks-top-content">Từ kho Trung Quốc về Việt Nam</div>
                     </div>
                 </div>
-                <div class="row feedback-bottom mt-5">
+                <div class="row feedbacks-bottom mt-5">
                     <h1>đoạn này style cho anh 3 cái nằm dọc, a làm slider sau nha !</h1>
-                    <div class="col-12 row feedback-bottom-item">
+                    <div class="col-12 row feedbacks-bottom-item">
                         <div class="col-3">
                             <img src="./assets/images/home/users.png" alt="">
 
@@ -1110,7 +1110,7 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                             <span class="name">Angela J </span>
                         </div>
                     </div>
-                    <div class="col-12 row feedback-bottom-item">
+                    <div class="col-12 row feedbacks-bottom-item">
                         <div class="col-3">
                             <img src="./assets/images/home/users.png" alt="">
 
@@ -1122,7 +1122,7 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                             <span class="name">Angela J </span>
                         </div>
                     </div>
-                    <div class="col-12 row feedback-bottom-item">
+                    <div class="col-12 row feedbacks-bottom-item">
                         <div class="col-3">
                             <img src="./assets/images/home/users.png" alt="">
 
@@ -1137,6 +1137,71 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                 </div>
             </div>
         </section>
+        <section class="news mt-5">
+            <div class="container">
+                <div class="row news-title m-0">
+                    <h1 class="title">tin mới nhất</h1>
+                    <p>Cập nhật tin tức sự kiện, tin khuyến mại 1688.com, tmall.com, taobao.com </p>
+                </div>
+                <div class="row news-content m-0">
+                    <div class="col-4 news-content-item">
+                        <div class="">
+                            <img src="./assets/images/home/new.png" alt="" srcset="">
+                            <h4 class="new-title">Lorem ipsum dolor sit amet, consectetuer adipiscing</h4>
+                            <div>to do line follow design</div>
+                            <p>Lorem ipsum dolor sit amet, consectet adipiscing sed diam nonummy...</p>
+                        </div>
+                    </div>
+                     <div class="col-4">
+                        <div class="">
+                            <img src="./assets/images/home/new.png" alt="" srcset="">
+                            <h4 class="new-title">Lorem ipsum dolor sit amet, consectetuer adipiscing</h4>
+                            <div>to do line follow design</div>
+                            <p>Lorem ipsum dolor sit amet, consectet adipiscing sed diam nonummy...</p>
+                        </div>
+                    </div>
+                     <div class="col-4">
+                        <div class="">
+                            <img src="./assets/images/home/new.png" alt="" srcset="">
+                            <h4 class="new-title">Lorem ipsum dolor sit amet, consectetuer adipiscing</h4>
+                            <div>to do line follow design</div>
+                            <p>Lorem ipsum dolor sit amet, consectet adipiscing sed diam nonummy...</p>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
+            </section>
+            <section class="faqs mt-5">
+                <div class="container">
+                    <div class="row faqs-title m-0">
+                        <h1 class="title">câu hỏi thường gặp</h1>
+                        <div>to do line design...</div>
+                    </div>
+                     <div class="row faqs-content m-0">
+                        <div class="col-6">
+                            <div class="faqs-item">
+                                <div class="faqs-item-title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</div>
+                                <div class="faqs-item-content"><span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</span></div>
+                            </div>
+                            <div class="faqs-item">
+                                <div class="faqs-item-title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</div>
+                                <div class="faqs-item-content"><span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</span></div>
+                            </div>
+                        </div>
+                         <div class="col-6">
+                            <div class="faqs-item">
+                                <div class="faqs-item-title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</div>
+                                <div class="faqs-item-content"><span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</span></div>
+                            </div>
+                            <div class="faqs-item">
+                                <div class="faqs-item-title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</div>
+                                <div class="faqs-item-content"><span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</span></div>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+            </section>
     </div>
     <footer>
         <div class="
@@ -1184,206 +1249,8 @@ nhằm nâng cao chất lượng phục vụ , đem đến sự hài lòng cho k
                     </li>
                 </ul>
             </div>
-            <div>
-                <h4 class="text-uppercase font-15 text-dark">Accessories</h4>
-                <ul>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Mac Accessories</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Mac Accessories</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Mice & Keyboards</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Mousepads</a>
-                    </li>
-
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Health & Home Devices</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Webcam & Headset</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Bluetooth</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Bút cảm ứng Adonit</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Stand for MacBook</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Hub USB-C for HyperDrive</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Đầu đọc thẻ</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Phần mềm Microsoft</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h4 class="text-uppercase font-15 text-dark">audio system</h4>
-                <ul>
-                    <li class="font-13"><a class="text-secondary" href="#">JBL</a></li>
-                    <li class="font-13"><a class="text-secondary" href="#">Bose</a></li>
-                    <li class="font-13"><a class="text-secondary" href="#">Sony</a></li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Ultimate Ears</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Harman Kardon</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Marshall</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Audio Pro</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Phantom (Devialet)</a>
-                    </li>
-                    <li class="font-13"><a class="text-secondary" href="#">Naim</a></li>
-                    <li class="font-13"><a class="text-secondary" href="#">KEF</a></li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Bowers & Wilkins</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">TEAC MC-D800</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h4 class="text-uppercase font-15 text-dark">headphone</h4>
-                <ul>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe JBL</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Bose</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Skull Candy</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Sony</a>
-                    </li>
-                    <li class="font-13">
-
-                        <a class="text-secondary" href="#">Tai nghe Audio Technica</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Sudio</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Jabra</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Plantronics</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe AKG</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Master & Dynamic</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Tai nghe Philips</a>
-                    </li>
-                </ul>
-
-            </div>
-            <div>
-                <h4 class="text-uppercase font-15 text-dark">thông tin mở rộng</h4>
-                <ul>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Chính sách bảo hành</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Chính sách đổi trả</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Chính sách bảo mật thông tin</a
-                      >
-                  </li>
-                  <li class="font-13">
-                      <a class="text-secondary" href="#">Dịch vụ sửa chữa</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Vận chuyển - Thanh toán</a>
-                    </li>
-                    <li class="font-13">
-                        <a class="text-secondary" href="#">Liên hệ</a>
-                    </li>
-                </ul>
-            </div>
-            </ div>
-            <div class="container-fluid bg-mac365-primary">
-                <div class="pl-30 pt-35 pb-20 border-bottom border-secondary">
-                    <h1 class="text-white font-36">MAC 365</h1>
-                    <p class="text-secondary font-13">
-                        Được thiết lập từ năm 2008, Mac Center được ghi nhận là một trong những cửa hàng chuyên cung cấp các sản phẩm công nghệ cao tại Việt Nam.
-                    </p>
-                    <p class="text-secondary font-13">
-                        Với hơn 10 năm kinh nghiệm & đam mê trong lĩnh vực máy tính và đặc biệt là các dòng máy tính Apple, Mac Center hy vọng sẽ giúp bạn có được những sản phẩm Apple với chất lượng tốt nhất tại Việt Nam.
-                    </p>
-                </div>
-                <div class="row pl-30 pt-20 pb-20">
-                    <div class="col-12 col-lg-6">
-                        <h3 class="text-white font-17">MAC 365</h3>
-                        <p class="text-secondary font-13">
-                            Số 92/16 Phạm Ngọc Thạch, P.6, Quận 3 ,TP. Hồ Chí Minh, Việt Nam.
-                        </p>
-                        <p class="text-secondary font-13">Tel:0934.86.55.99</p>
-                        <p class="text-secondary font-13">
-                            <strong>E-mail:</strong> sales@mac365.vn
-                        </p>
-                    </div>
-                    <div class="col-12 col-lg-6">
-
-                        <h3 class="font-17 text-white">GIAO HÀNG TẬN NƠI</h3>
-                        <p class="text-secondary font-13">
-                            Gọi ngay cho chúng tôi để được giao hàng tận nơi trong vòng 30 phút - 1 giờ tại TP. Hồ Chí Minh.
-                        </p>
-                        <div class="font-20 border-secondary border p-10 w-50-desktop">
-                            <a href="#"><i
-                      class="fa fa-volume-control-phone text-secondary ml-10"
-                        aria-hidden="true"
-                      ></i>
-                    <span class="text-danger ml-1">0934.86.55.99</span></a
-                  >
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="row row-cols-3 row-cols-lg-6 pb-20 align-items-center">
-                  <div class="pt-20">
-                    <a href="#"
-                      ><img src="assets/images/footer/footer-logo-jbl.png" alt=""
-                      /></a>
-                        </div>
-                        <div class="pt-20">
-                            <a href="#"><img src="assets/images/footer/footer-logo-bose.png" alt="" /></a>
-                        </div>
-                        <div class="pt-20">
-                            <a href="#"><img src="assets/images/footer/footer-logo-hk.png" alt="" /></a>
-                        </div>
-                        <div class="pt-20">
-                            <a href="#"><img src="assets/images/footer/footer-logo-Marshall.png" alt="" /></a>
-                        </div>
-                        <div class="pt-20">
-                            <a href="#"><img src="assets/images/footer/footer-logo-SkullCandy.png" alt="" /></a>
-                        </div>
-                        <div class="pt-20">
-                            <a href="#"><img src="assets/images/footer/footer-logo-sony.png" alt="" /></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        
+         
     </footer>
     <!-- Global Vendor, plugins JS -->
 
